# EasyWiFi-dev

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  easywifi-settings-legacy.json  easywifi-settings-legacy.json.bak-e2e  sdr-plugins.json
assets/: bt_company_ids.csv  bt_service_uuids.csv  bt_uuid_resolver_overrides.csv  oui.csv
continuity/: CURRENT_STATUS.md  DEFECT_LEDGER.md  DEPENDENCIES.md  EXECUTION_BOARD.md  INITIAL_REQUIREMENTS.md  LAST_SESSION.md  NEXT_STEPS.md  POLICY_RESTRICTIONS.md  README.md  REPO_MAP.md  UBUNTU_BOOTSTRAP.md  UPDATED_REQUIREMENTS.md  VALIDATION_MATRIX.md  bootstrap_ubuntu.sh
continuity/transfer/: README.md  make_transfer_artifacts.sh
docs/: LIMITATIONS.md  VALIDATION.md
lovableUI/: EasyWiFi-UI-Design-Spec.md  app.js  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
lovableUI/electron/: main.cjs
lovableUI/src/: index.css  tailwind.config.lov.json
lovableUI/src/components/: APTable.tsx  BluetoothDetailPanel.tsx  BluetoothTab.tsx  ClientDetailPanel.tsx  ClientsTab.tsx  DetailPanel.tsx  HeaderBar.tsx  PreferencesDialog.tsx  RSSIMeter.tsx  ScanSetupDialog.tsx
lovableUI/src/data/: liveApi.ts  mockData.ts
lovableUI/src/pages/: Index.tsx
packaging/: easywifi.desktop  wirelessexplorer.desktop
scripts/: build_deb.sh  build_deb_easywifi.sh  build_deb_legacy.sh  run.sh  run_validation_matrix.sh  setup_ubuntu.sh  validate_sdr_artifacts.py
src/: lib.rs  main.rs  privilege.rs  settings.rs  test_mode.rs  webui.rs
src/bluetooth/: mod.rs
src/capture/: mod.rs
src/export/: mod.rs
src/gps/: mod.rs
src/model/: mod.rs
src/netintel/: mod.rs
src/oui/: mod.rs
src/sdr/: mod.rs
src/storage/: mod.rs
src/ui/: mod.rs
