[package]
name = "easywifi"
version = "0.1.1-rc1"
edition = "2021"
description = "EasyWiFi passive Wi-Fi and Bluetooth analysis app"
license = "MIT"
default-run = "easywifi"

[lib]
name = "easywifi"

[[bin]]
name = "easywifi"
path = "src/main.rs"

[[bin]]
name = "easywifi-helper"
path = "src/bin/easywifi-helper.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
crossbeam-channel = "0.5"
csv = "1.3"
dirs = "5.0"
gio = "0.19"
glib = "0.19"
gtk4 = "0.8"
libc = "0.2"
once_cell = "1.19"
parking_lot = "0.12"
pcap-file = "3.0.0-rc1"
rand = "0.8"
regex = "1.10"
rusqlite = { version = "0.31", features = ["bundled", "chrono", "serde_json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
ureq = { version = "2.10", default-features = false, features = ["tls"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
zip = { version = "0.6", default-features = false, features = ["deflate"] }

[profile.release]
codegen-units = 1
lto = true
